--- a/src/app/components/entrepreneur-settings/entrepreneur-settings.component.html
+++ b/src/app/components/entrepreneur-settings/entrepreneur-settings.component.html
@@ -11,8 +11,11 @@
                 </div>
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Description *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
-                    <input type="text" class="form-control" placeholder="Description *"
-                           formControlName="description">
+                    <textarea type="text"
+                              class="form-control"
+                              placeholder="Description *"
+                              formControlName="description">
+                    </textarea>
                 </div>
 
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Category *</p>
