--- a/src/app/show-profile/show-profile.component.html
+++ b/src/app/show-profile/show-profile.component.html
@@ -1,5 +1,5 @@
 <!--<main id="main">-->
-    <ul *ngIf="isEntrepreneur">
+    <ul *ngIf="isEntrepreneur" style="margin:0; padding:0;">
 
                <!-- ==================== Real page ===================== -->
                <!-- <app-entrepreneur-profile></app-entrepreneur-profile>
@@ -7,17 +7,20 @@
                <app-entrepreneur-score></app-entrepreneur-score> -->
    
                 <!--Finish section-->
-        
-        
+
+      <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+          <div class="hero-container" data-aos="fade-in">
+          <h1>Name</h1>
+          <p>I'm <span>ENTREPENEUR</span></p>
+          </div>
+      </section><!-- End Hero -->
       <section id="about" class="about container">
             <div class="container">
-
                 <div class="section-title">
-                    <h2>About Us</h2>
-                    <p>sjkdffbsiofjv ozjdfogjozisiobzeroy ji eroijgoie se fish isdf</p>
+                    <h2>About Us</h2>  
                 </div>
                 <div class="justify-content-center">
-                    <img src="../../../assets/img/empanadas-local.jpg" class="col-lg-12 col-sm-12 col-md-8 py-1">
+                  <p>Text of user description here </p>
                 </div>
             </div>
         </section>
@@ -249,9 +252,6 @@
         
               <div class="section-title">
                   <h2>Rating</h2>
-                  <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                      consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                      fugiat sit in iste officiis commodi quidem hic quas.</p>
               </div>
         
               <div class="calification">
@@ -327,9 +327,6 @@
         
               <div class="section-title">
                   <h2>Testimonials</h2>
-                  <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                      consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                      fugiat sit in iste officiis commodi quidem hic quas.</p>
               </div>
         
               <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -423,7 +420,7 @@
     
     </ul>
 
-    <ul *ngIf="!isEntrepreneur">
+    <ul *ngIf="!isEntrepreneur" style="margin:0; padding:0;">
 
                <!-- ==================== Real page ===================== -->
 <!--                <app-influencer-profile></app-influencer-profile>
@@ -432,17 +429,20 @@
    
                 <!--Finish section-->
 
-         
+        <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+            <div class="hero-container" data-aos="fade-in">
+            <h1>Name</h1>
+            <p>I'm <span>ENTREPENEUR</span></p>
+            </div>
+        </section><!-- End Hero -->
         <section id="about" class="about">
             <div class="container">
 
                 <div class="section-title">
-                    <h2>About Me</h2>
-                    <p>fgtkumsfb nnyrjnfrbsf xftdhbe5vdy ndutbjydrx thbr xj n  sxb rxhjydtxfhn</p>
+                    <h2>About Me</h2>  
                 </div>
                 <div class="justify-content-center">
-                    <img src="https://astelus.com/wp-content/viajes/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada.jpg"
-                        class="col-lg-12 col-sm-12 col-md-8 py-1">
+                  <p>Description goes here</p>
                 </div>
             </div>
         </section>
@@ -457,22 +457,13 @@
                 </div>
 
                 <div class="row no-gutters">
-                    
-                    <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-                        <div class="count-box">
-                            <i class="bi bi-emoji-smile"></i>
-                            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
-                                class="purecounter"></span>
-                            <p><strong>Contacts made </strong>Who many Entrepreneurs wre interested in Alex profile</p>
-                        </div>
-                    </div>
-
+                  
                     <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
                         <div class="count-box">
                             <i class="bi bi-journal-richtext"></i>
                             <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
                                 class="purecounter"></span>
-                            <p><strong>Score</strong>How many users gave a score to Alex profile</p>
+                            <p><strong>Cathegory:  </strong>Cathegory_name</p>
                         </div>
                     </div>
 
@@ -481,7 +472,7 @@
                             <i class="bi bi-people"></i>
                             <span data-purecounter-start="0" data-purecounter-end="32550" data-purecounter-duration="1"
                                 class="purecounter"></span>
-                            <p><strong>Followers</strong> 10000</p>
+                                <p><strong>Colaborations:  </strong>How many colaborations has already made: ##</p>
                         </div>
                     </div>
                 </div>
@@ -656,9 +647,6 @@
 
       <div class="section-title">
           <h2>Rating</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-              consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-              fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div>
 
       <div class="calification">
@@ -734,9 +722,6 @@
 
       <div class="section-title">
           <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-              consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-              fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div>
 
       <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
