--- a/src/app/components/contacts/contacts.component.css
+++ b/src/app/components/contacts/contacts.component.css
@@ -5,7 +5,8 @@ h1{
 hr {
     background-color: rgb(0, 0, 0);
     padding: 0;
-    margin: 20px;
+    margin: 20px 20px 40px 20px
+
 }
 
 hr.hr-3 {
