--- a/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
+++ b/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
@@ -21,7 +21,7 @@
     <section id="facts" class="facts container" style="padding: 0 2% 10px 2%;">
         <div class="container">
             <div class="section-title" style="padding: 0;">
-                <h2>Categories</h2>
+                <h2>Company facts</h2>
             </div>
             <div class="row no-gutters">
                 
