--- a/src/app/components/influencer-collaboration/influencer-collaboration.component.html
+++ b/src/app/components/influencer-collaboration/influencer-collaboration.component.html
@@ -1,9 +1,9 @@
 <section class="section " id="portfolio">
     <div class="container">
       <div class="section-title">
-        <h2>Collaboration</h2>
+        <h2>Colaboration</h2>
         <div class="line-dec"></div>
-        <span><p>Select your entrepreneur favorite</p> </span>
+        <span><p>Look your favorite colaboration</p> </span>
       </div>
       <div class="row">
         <div class="col-lg-12 col-sm-12 d-flex justify-content-center">
