--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -19,7 +19,7 @@
 		<div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let personaje of ventures">
 			<div class="card-container">
 				<mat-card class="example-card">
-					<a routerLink="/show-profile" routerLinkActive="active"><mat-card-header>
+					<a [routerLink]="['/show-profile',personaje.id]" routerLinkActive="active"><mat-card-header>
 					<div mat-card-avatar class="example-header-image"></div>
 					<mat-card-title>{{personaje.name}}</mat-card-title>
 					</mat-card-header></a>
@@ -43,7 +43,7 @@
 		<div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let personaje of influencers">
 			<div class="card-container">
 				<mat-card class="example-card">
-					<a routerLink="/show-profile" routerLinkActive="active"><mat-card-header>
+					<a [routerLink]="['/show-profile',personaje.id]" routerLinkActive="active"><mat-card-header>
 					<div mat-card-avatar class="example-header-image"></div>
 					<mat-card-title>{{personaje.name_user}}</mat-card-title>
 					</mat-card-header></a>
