--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,16 +1,18 @@
-<div *ngIf="!showChat" class="chatIconCont" (click)="showChat=true">
+<div *ngIf="!showChat" class="chatIconCont" (click)="showChat=true"> <!--A parte de eso en la condión se le debe añadir otro parámetro el cual pregunte por el tipo de usuario logueado esto permitirá identificar quien es el emisor-->
   <img src="./assets/img/chat_icon.png" class="chatIcon" alt="chat_icon">
 </div>
 
-<div class="card text-center cardContainer" *ngIf="showChat">
+<div class="card text-center cardContainer" *ngIf="showChat"> <!--De igual manera se debe agregar la misma condición en esta parte-->
   <div class="card-header">
     CHAT
     <div class="closeI" (click)="showChat=false"><i class="bi bi-x-lg"></i></div>
   </div>
   <div class="card-body">
       <div id="msgContanier" class="messageContainer h-100">
-          <p *ngFor="let message of messages" class="msg send p-2"
-          >
+        
+          <p *ngFor="let message of messages" class="msg send p-2">
+          <!-- [ngClass]="(userLoged.uid == message.transmitter)? 'send' : 'receibe'" para cambiar el estilo del mensaje -->
+          
                 {{message.text}}
           </p>
       </div>
