social-networks links

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -13,6 +13,12 @@
                 <a href={{facebook}} class="facebook" *ngIf="facebook !== null"><i class="bx bxl-facebook"></i></a>
                 <a href={{twitter}} class="twitter" *ngIf="twitter !== null"><i class="bx bxl-twitter"></i></a>
                 <a href={{instagram}} class="instagram" *ngIf="instagram !== null"><i class="bx bxl-instagram"></i></a>
+                <a href={{youtube}} class="youtube" *ngIf="youtube !== null"><i class="bx bxl-youtube"></i></a>
+                <a href={{snapchat}} class="snapchat" *ngIf="snapchat !== null"><i class="bx bxl-snapchat"></i></a>
+                <a href={{tik_tok}} class="tik_tok" *ngIf="tik_tok !== null"><i class="bx bxl-tiktok"></i></a>
+                <a href={{pinterest}} class="pinterest" *ngIf="pinterest !== null"><i class="bx bxl-pinterest"></i></a>
+                <a href={{twitch}} class="twitch" *ngIf="twitch !== null"><i class="bx bxl-twitch"></i></a>
+                <a href={{reddit}} class="reddit" *ngIf="reddit !== null"><i class="bx bxl-reddit"></i></a>
                 <!-- <a href={{facebook}} class="facebook" ng-show="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href={{facebook}} class="facebook" ng-show="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href={{facebook}} class="facebook" ng-show="facebook"><i class="bx bxl-facebook"></i></a>
