--- a/src/app/components/influencer-profile/influencer-profile.component.html
+++ b/src/app/components/influencer-profile/influencer-profile.component.html
@@ -1,7 +1,7 @@
 
      <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
-          <h1>Name</h1>
+          <h1>{{misObjetos.name}}</h1>
           <p>I'm <span>INFLUENCER</span></p>
         </div>
       </section><!-- End Hero -->
@@ -53,15 +53,15 @@
             </div>
             <div class="row no-gutters">
                 <div  data-aos="fade-up" data-aos-delay="100">
-                        <i class="bx bxl-twitter"></i>
-                        <i class="bx bxl-facebook"></i>
-                        <i class="bx bxl-instagram"></i>
-                        <i class="bx bxl-tiktok"></i>
-                        <i class="bx bxl-snapchat"></i>
-                        <i class="bx bxl-youtube"></i>
-                        <i class="bx bxl-pinterest"></i>
-                        <i class="bx bxl-twitch"></i>
-                        <i class="bx bxl-reddit"></i>
+                    <a href={{facebook}} class="facebook" *ngIf="facebook !== null"><i class="bx bxl-facebook"></i></a>
+                    <a href={{twitter}} class="twitter" *ngIf="twitter !== null"><i class="bx bxl-twitter"></i></a>
+                    <a href={{instagram}} class="instagram" *ngIf="instagram !== null"><i class="bx bxl-instagram"></i></a>
+                    <a href={{youtube}} class="youtube" *ngIf="youtube !== null"><i class="bx bxl-youtube"></i></a>
+                    <a href={{snapchat}} class="snapchat" *ngIf="snapchat !== null"><i class="bx bxl-snapchat"></i></a>
+                    <a href={{tik_tok}} class="tik_tok" *ngIf="tik_tok !== null"><i class="bx bxl-tiktok"></i></a>
+                    <a href={{pinterest}} class="pinterest" *ngIf="pinterest !== null"><i class="bx bxl-pinterest"></i></a>
+                    <a href={{twitch}} class="twitch" *ngIf="twitch !== null"><i class="bx bxl-twitch"></i></a>
+                    <a href={{reddit}} class="reddit" *ngIf="reddit !== null"><i class="bx bxl-reddit"></i></a>
                 </div>
             </div>
         </div>
