fix bugs profile

--- a/src/app/components/influencer-profile/influencer-profile.component.html
+++ b/src/app/components/influencer-profile/influencer-profile.component.html
@@ -1,7 +1,7 @@
 
      <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
-          <h1>{{misObjetos.name}}</h1>
+          <h1>{{name_user}}</h1>
           <p>I'm <span>INFLUENCER</span></p>
         </div>
       </section><!-- End Hero -->
