--- a/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
+++ b/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
@@ -1,6 +1,6 @@
     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
-        <h1>Name</h1>
+        <h1>{{name_user}}</h1>
         <p>I'm <span>ENTREPENEUR</span></p>
         </div>
     </section><!-- End Hero -->
