--- a/src/app/show-profile/show-profile.component.html
+++ b/src/app/show-profile/show-profile.component.html
@@ -14,7 +14,7 @@
 
         <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
             <div class="hero-container" data-aos="fade-in">
-            <h1>Name</h1>
+            <h1>{{name}}</h1>
             <p>I'm <span>INFLUENCER</span></p>
             </div>
         </section><!-- End Hero -->
@@ -25,7 +25,7 @@
                   <h2>About Us</h2>  
               </div>
               <div class="justify-content-center">
-                  <p>hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola </p>
+                  <p>{{description}}</p>
               </div>
           </div>
         </section><!-- End About Section -->
@@ -426,7 +426,7 @@
 
         <section id="hero2" class="d-flex flex-column justify-content-center align-items-center">
             <div class="hero-container hero-entrepeneur" data-aos="fade-in">
-            <h1>Name</h1>
+            <h1>{{name}}</h1>
             <p>I'm <span>ENTREPENEUR</span></p>
             </div>
         </section><!-- End Hero -->
@@ -438,7 +438,7 @@
                     <h2>About Me</h2>  
                 </div>
                 <div class="justify-content-center">
-                  <p>Description goes here</p>
+                  <p>{{description}}</p>
                 </div>
             </div>
         </section>
@@ -957,7 +957,8 @@
         </div>
 
     </div>
-</section><!-- End Facts Section -->
+</section>
+<!-- End Facts Section -->
 </div>
 </div>
 
