--- a/src/app/components/influencer-collaboration/influencer-collaboration.component.html
+++ b/src/app/components/influencer-collaboration/influencer-collaboration.component.html
@@ -3,7 +3,7 @@
       <div class="section-title">
         <h2>Colaboration</h2>
         <div class="line-dec"></div>
-        <span><p>Look your favorite colaboration</p> </span>
+        <span><p class="p-one">Look your favorite colaboration</p> </span>
       </div>
       <div class="row">
         <div class="col-lg-12 col-sm-12 d-flex justify-content-center">
@@ -24,8 +24,8 @@
                   <span>Home</span></label>
             </div>
             <div class="isotope-box">
-              <div class="isotope-item" data-type="Esthetic">
-                <div class="card-container">
+              <div class="isotope-item " data-type="Esthetic">
+                <div class="card-container ">
                   <mat-card class="example-card">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
@@ -33,14 +33,11 @@
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                     </mat-card-header>
                     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       Descripción del emprendimiento
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
@@ -54,14 +51,11 @@
                       <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                       </mat-card-header>
                       <img mat-card-image src="http://pm1.narvii.com/7658/4c600ac5be2bcd8e419df791cdfa9e97c80ed195r1-540-540v2_uhq.jpg" alt="Photo of a Shiba Inu">
-                      <br>
                       <mat-card-content>
                       <p>
                         Descripción del emprendimiento
                       </p>
                       </mat-card-content>
-                      <mat-card-actions>
-                      </mat-card-actions>
                     </mat-card>
                   </div>
               </div>
@@ -75,14 +69,11 @@
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                     </mat-card-header>
                     <img mat-card-image src="https://img-9gag-fun.9cache.com/photo/abGbeAB_460s.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       Descripción del emprendimiento
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
@@ -96,16 +87,12 @@
                     <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                     </mat-card-header>
-                    <br>
                     <img mat-card-image src="https://pm1.narvii.com/6770/9ca45e6b78d9e059d8f5ada9db60c76a1e91e7a3v2_hq.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       Descripción del emprendimiento
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
@@ -119,14 +106,11 @@
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                     </mat-card-header>
                     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       Descripción del emprendimiento
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
@@ -140,14 +124,11 @@
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                     </mat-card-header>
                     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       Descripción del emprendimiento
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
